[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "debuggpt"
version = "0.1.1"
python_requires = ">=3.10"
description = "The realest AI debugger in the game."
authors = [
    {name = "Ryan Young", email = "dev@ryayoung.com"}
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ryayoung/debuggpt"
repository = "https://github.com/ryayoung/debuggpt"
documentation = "https://debuggpt.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries"
]
dependencies = [
    'openai',
]

# [project.urls]
# Bug Tracker = "https://github.com/ryayoung/debuggpt/issues"

# [project.scripts]
# Uncomment and modify the lines below to create command-line scripts
# that call specific functions in your package
# my-script = "debuggpt:my_function"

# [project.dependencies]
# Add your package's dependencies here
# pandas = "^1.3.3"

# [project.dev-dependencies]
# Add your package's development dependencies here
# pytest = "^6.2.5"

# [project.extras]
# Uncomment and modify the lines below to define optional features and their dependencies
# [project.extras.feature_name]
# some_dependency = "^1.0.0"
